// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Loading props checkGrammar=false 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props checkGrammar=true 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props checkHighlight=false 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props checkHighlight=true 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props checkSpaces=false 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props checkSpaces=true 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props className="my-classname" 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs my-classname uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props className="test-classname" 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs test-classname uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="brown" 1`] = `
<Div
  className="color-schema-brown uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="brown-rich" 1`] = `
<Div
  className="color-schema-brown-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="cyan" 1`] = `
<Div
  className="color-schema-cyan uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="cyan-rich" 1`] = `
<Div
  className="color-schema-cyan-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="default" 1`] = `
<Div
  className="color-schema-default uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="green" 1`] = `
<Div
  className="color-schema-green uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="green-rich" 1`] = `
<Div
  className="color-schema-green-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="grey" 1`] = `
<Div
  className="color-schema-grey uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="grey-rich" 1`] = `
<Div
  className="color-schema-grey-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="orange" 1`] = `
<Div
  className="color-schema-orange uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="orange-rich" 1`] = `
<Div
  className="color-schema-orange-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="pink" 1`] = `
<Div
  className="color-schema-pink uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="pink-rich" 1`] = `
<Div
  className="color-schema-pink-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="purple" 1`] = `
<Div
  className="color-schema-purple uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="purple-rich" 1`] = `
<Div
  className="color-schema-purple-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="red" 1`] = `
<Div
  className="color-schema-red uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="red-rich" 1`] = `
<Div
  className="color-schema-red-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="yellow" 1`] = `
<Div
  className="color-schema-yellow uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema="yellow-rich" 1`] = `
<Div
  className="color-schema-yellow-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props content="This is Content from ContentMixin" 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props content=12345 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  12345
</Div>
`;

exports[`UU5.Bricks.Loading props controlled=false 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props controlled=true 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props default props 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props disabled=false 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props disabled=false 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props disabled=true 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-common-disabled uu5-bricks-loading-animated"
  disabled={true}
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props disabled=true 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-common-disabled uu5-bricks-loading-animated"
  disabled={true}
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props dynamic=false 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props dynamic=true 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props fullTextSearchPriority=0 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu-fulltextsearch-0 uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props fullTextSearchPriority=0 2`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu-fulltextsearch-0 uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props hidden=false 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props hidden=false 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props hidden=true 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-common-hidden uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props hidden=true 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-common-hidden uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props id="myId" 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="myId"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props id="test-id" 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="test-id"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props ignoreHTML=false 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props ignoreHTML=true 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props mainAttrs=undefined 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props name="myName" 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  name="myName"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel="bigBox" 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBox"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel="bigBoxCollection" 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel="box" 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="box"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel="box" 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="box"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel="boxCollection" 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="boxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel="inline" 1`] = `
<Span
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated uu5-common-inline"
  id="uuID"
  nestingLevel="inline"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  >
    .
  </span>
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  >
    .
  </span>
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  >
    .
  </span>
</Span>
`;

exports[`UU5.Bricks.Loading props nestingLevel="inline" 3`] = `
<Span
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated uu5-common-inline"
  id="uuID"
  nestingLevel="inline"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  >
    .
  </span>
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  >
    .
  </span>
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  >
    .
  </span>
</Span>
`;

exports[`UU5.Bricks.Loading props nestingLevel="page" 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel="smallBox" 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="smallBox"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel="smallBoxCollection" 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="smallBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel="spa" 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props noPrint=false 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props noPrint=true 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props pureRender=false 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props pureRender=true 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props selected=false 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props selected=true 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-common-selected uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props style="padding:8px; borderRadius: 2px" 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props style={"backgroundColor":"red","color":"blue"} 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props style={"margin":8} 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props textCorrector=false 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props textCorrector=true 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props tooltip="My Tooltip" 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title="My Tooltip"
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;
